--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,11 +36,18 @@
         <item>Striker (ST)</item>
     </string-array>
 
-    <string name="step1">• Paso 1: Asegúrese de la correcta adquisición de la señal</string>
-    <string name="step2">• Paso 2: Comienzo de la calibración presionando el botón "Iniciar Calibración"</string>
-    <string name="step3">• Paso 3: Realice una caminata suave de 10-15 segundos</string>
-    <string name="step4">• Paso 4: Realice un sprint a máxima velocidad de 15-20 segundos</string>
-    <string name="step5">• Paso 5: Realice nuevamente una caminata suave de 10-15 segundos</string>
-    <string name="step6">• Paso 6: Finalice la calibración presionando el botón "Finalizar Calibración"</string>
+    <string name="paso1"> Paso 1: </string>
+    <string name="paso2"> Paso 2: </string>
+    <string name="paso3"> Paso 3: </string>
+    <string name="paso4"> Paso 4: </string>
+    <string name="paso5"> Paso 5: </string>
+    <string name="paso6"> Paso 6: </string>
+
+    <string name="step1"> Asegúrese de la correcta adquisición de la señal.</string>
+    <string name="step2"> Dé comienzo a la calibración presionando el botón "Iniciar Calibración".</string>
+    <string name="step3"> Realice una caminata suave de 15-20 segundos.</string>
+    <string name="step4"> Realice un sprint a máxima velocidad de 20-30 segundos.</string>
+    <string name="step5"> Realice nuevamente una caminata suave de 15-20 segundos.</string>
+    <string name="step6"> Aguarde a recibir un mensaje en su pantalla que verifique la obtención de un resultado correcto. En caso contrario, descanse y repita la calibración.</string>
 
 </resources>
